GGB-798 Fix: - In IE the input bar has two vertical scrollbars when empty; none of those should be visible.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@49189 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -3428,6 +3428,15 @@ body.application[dir=rtl] .imageCorner {
 	border-top: #6161FF solid 1px;
 	border-bottom:	#6161FF solid 1px;
 	min-height:61px;
+	overflow: hidden;
+}
+
+.scrollableTextBox {
+	overflow: hidden;
+}
+
+.scrollableTextBox >* {
+	overflow: hidden;
 }
 
 .NoHorizontalScroll .InputTreeItem .hasCursorPermanent {
